2010-11-26  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): Move check for unexpected ')' inside loop.

	* LispPackage.java (lookup): Update, since Symbol constructor is
	now protected.

2010-11-14  Per Bothner  <per@bothner.com>

	* ReaderIgnoreRestOfLine.java (read): Unread line-ending.

2010-10-21  Per Bothner  <per@bothner.com>

	* LispReader.java (makePair): New overloaded method.

2010-10-15  Per Bothner  <per@bothner.com>

	* LangObjType.java (convertValue): Just return null for 'integer',
	to avoid some hiding of static type mismatches.

2010-10-05  Per Bothner  <per@bothner.com>

	* LangPrimType.java (convertValue): New method.
	* LangObjType.java (coercionMethod, convertValue): New methods.
	(emitCoerceFromObject): Make use of coercionMethod.

2010-09-17  Per Bothner  <per@bothner.com>

	* LangPrimType.java (compare): Return -1 for (char,gnu.text.Char).

2010-08-01  Per Bothner  <per@bothner.com>

	* DefineNamespace.java (scanForDefinitions): Set IS_SINGLE_VALUE
	on namespace variable.

	* LispLanguage.java (parse): Use new Compilation convenience methods.

2010-06-27  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java (readContent): Need to reset tokenBufferLength
	before reading escaped expression.

2010-06-18  Per Bothner  <per@bothner.com>

	* ReadTable.java (hexEscapeAfterBackslash): New field.
	* LispReader.java (readToken): Possibly handle R6RS inline hex escape.

2010-05-31  Per Bothner  <per@bothner.com>

	Add support for xmlsns="xxx" - i.e. default namespace declarations.
	* ReaderXmlElement.java (DEFAULT_ELEMENT_NAMESPACE): New constant.
	(readQNameExpression): Extra parameter forElement, in which case
	use DEFAULT_ELEMENT_NAMESPACE if there is no prefix.
	(readElementConstructor): Update calls to readQNameExpression.
	* ResolveNamespace.java (rewriteForm): If DEFAULT_ELEMENT_NAMESPACE
	default to EmptyNamespace.
	* MakeXmlElement.java (rewriteForm): If prefix is empty,