@@ -1,3 +1,11 @@
+2010-12-27  Per Bothner  <per@bothner.com>
+
+	* LangObjType.java (procedureType): New static field.
+	(PROCEDURE_TYPE_CODE): New constant.
+	(compare, coercionMethod, coercionOrNullMethod, coerceFromObject:
+	Update accordingly.
+	(coerceToProcedureOrNull, coerceToProcedure): New methods.
+
 2010-11-26  Per Bothner  <per@bothner.com>
 
 	* LispLanguage.java (parse): Move check for unexpected ')' inside loop.
